--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,32 +1,36 @@
 <% provide(:title, @user.nome) %>
 
-<div class="span4 offset2">
-	<h1><%= link_to @user.nome, edit_user_path(@user) %></h1>
-	<% if current_user.admin %>
-		<%= link_to "Voltar", users_path, class: 'btn' %>
-	<% end %>
-</div>
-<div class="span4">
-	<dl class="dl-horizontal">
-		<dt>N. mecanográfico</dt>
-		<dd><%= @user.numero_mecanografico %></dd>
-		<dt>E-mail</dt>
-		<dd><%= @user.email %></dd>
-		<dt>Contacto</dt>
-		<dd><%= @user.contacto %>&nbsp;</dd>
-		<dt>Serviço</dt>
-		<dd><%= link_to @user.service.nome, reqs_by_boss_path %></dd>
-		<dt>Unidade</dt>
-		<dd><%= @user.ulsneunit.nome %></dd>
-	</dl>
-</div>
-<div class="row-fluid">
-	<div class="span6 well">
-		<h2>Requisições transporte de material <small><%= link_to "ver todas", user_reqmaterials_path(@user) %></small></h2>
-		<%= render 'reqmaterials/index' %>
-	</div>
-	<div class="span6 well">
-		<h2>Requisições transporte de pessoal <small><%= link_to "ver todas", user_reqpeople_path(@user) %></small></h2>
-		<%= render 'reqpeople/index' %>
+<h1><%= @user.nome %></h1>
+<div class="span10 offset1 tabs">
+	<ul class="nav nav-tabs">
+		<li class="active"><a href="#tabs-1" data-target="#tabs-1" data-toggle="tab">Dados do utilizador</a></li>
+		<li><a href="#tabs-2" data-target="#tabs-2" data-toggle="tab">Requisições de transporte de material</a></li>
+		<li><a href="#tabs-3" data-target="#tabs-3" data-toggle="tab">Requisições de transporte de pessoal</a></li>
+	</ul>
+	<div class="tab-content">
+		<div class="tab-pane active fade in" id="tabs-1">
+			<dl class="dl-horizontal">
+				<dt>N. mecanográfico</dt>
+				<dd><%= @user.numero_mecanografico %></dd>
+				<dt>E-mail</dt>
+				<dd><%= @user.email %></dd>
+				<dt>Contacto</dt>
+				<dd><%= @user.contacto %>&nbsp;</dd>
+				<dt>Serviço</dt>
+				<dd><%= link_to @user.service.nome, reqs_by_boss_path %></dd>
+				<dt>Unidade</dt>
+				<dd><%= @user.ulsneunit.nome %></dd>
+			</dl>
+			<%= link_to "Editar", edit_user_path(@user), class: 'btn' %>
+			<% if current_user.admin %>
+				<%= link_to "Voltar", users_path, class: 'btn' %>
+			<% end %>
+		</div>
+		<div class="tab-pane" id="tabs-2">
+			<%= render 'reqmaterials/index' %>
+		</div>
+		<div class="tab-pane" id="tabs-3">
+			<%= render 'reqpeople/index' %>
+		</div>
 	</div>
 </div>
