Added back button

--- a/app/views/reqmaterials/_form.html.erb
+++ b/app/views/reqmaterials/_form.html.erb
@@ -43,7 +43,7 @@
 			</fieldset>
 			<div class="actions">
 				<%= f.submit "Submeter", class: 'btn btn-success' %>
-				<%= link_to "Cancelar", user_reqmaterial_path(@user, @reqmaterial), class: 'btn' %>
+				<%= link_to "Cancelar", root_url, class: 'btn' %>
 			</div>
 		</div>
 	</div>
