--- a/app/views/reqmaterials/show.html.erb
+++ b/app/views/reqmaterials/show.html.erb
@@ -31,6 +31,12 @@
 		<dd><%= @reqmaterial.comentario %>&nbsp;</dd>
 	</dl>
 	<%= link_to "Editar", edit_user_reqmaterial_path(@user, @reqmaterial), class: 'btn btn-primary' %>
-	<%= link_to "Cancelar", @user, class: 'btn' %>
+	<button onclick="goBack()" class="btn">Cancelar</button>
 	<%= link_to "Eliminar", user_reqmaterial_path(@user, @reqmaterial), method: :delete, data: { confirm: "Tem a certeza?"}, class: 'btn btn-danger'  %>
 </div>
+
+<script>
+function goBack() {
+	window.history.back()
+}
+</script>
