--- a/app/views/reqpeople/_form.html.erb
+++ b/app/views/reqpeople/_form.html.erb
@@ -55,7 +55,7 @@
 			</fieldset>
 			<div class="actions">
 				<%= f.submit "Submeter", class: 'btn btn-success' %>
-				<%= link_to "Cancelar", user_reqperson_path(@user, @reqperson), class: 'btn' %>
+				<%= link_to "Cancelar", root_url, class: 'btn' %>
 			</div>
 		</div>
 	</div>
