--- a/app/views/reqpeople/show.html.erb
+++ b/app/views/reqpeople/show.html.erb
@@ -39,6 +39,12 @@
 		<dd><%= @reqperson.comentario %>&nbsp;</dd>
 	</dl>
 	<%= link_to "Editar", edit_user_reqperson_path(@user, @reqperson), class: 'btn btn-primary' %>
-	<%= link_to "Cancelar", @user, class: 'btn' %>
+	<button onclick="goBack()" class="btn">Cancelar</button>
 	<%= link_to "Eliminar", user_reqperson_path(@user, @reqperson), method: :delete, data: { confirm: "Tem a certeza?"}, class: 'btn btn-danger'  %>
 </div>
+
+<script>
+function goBack() {
+	window.history.back()
+}
+</script>
