--- a/app/views/static_pages/all_reqmaterials.html.erb
+++ b/app/views/static_pages/all_reqmaterials.html.erb
@@ -1,6 +1,11 @@
 <% provide(:title, "Calendário") %>
 
+<h1>Requisições de transporte de material</h1>
 <div class="span10 offset1">
+	<div class="btn-group">
+		<%= link_to "Mais requisições", static_pages_reqmaterials_path, class: 'btn' %>
+		<%= link_to "Início", root_path, class: 'btn' %>
+	</div>
 	<div id='calendar'></div>
 </div>
 
