--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,16 +1,18 @@
 <% provide(:title, "Index") %>
 
 <h1>Requisições para <%= Date.today %></h1>
-<div class="span10 offset1">
-	<div class="tabs">
-		<ul class="nav nav-tabs">
-			<li class="active"><a href="#tabs-1" data-target="#tabs-1" data-toggle="tab">Requisições de transporte de material</a></li>
-			<li><a href="#tabs-2" data-target="#tabs-2" data-toggle="tab">Requisições de transporte de pessoal</a></li>
-		</ul>
+<div class="tabs">
+	<ul class="nav nav-tabs">
+		<li class="active"><a href="#tabs-1" data-target="#tabs-1" data-toggle="tab">Requisições de transporte de material</a></li>
+		<li><a href="#tabs-2" data-target="#tabs-2" data-toggle="tab">Requisições de transporte de pessoal</a></li>
+	</ul>
+	<div class="span10 offset1">
 		<div class="tab-content">
 			<div class="tab-pane active fade in" id="tabs-1">
-				<%= link_to "Gerir", static_pages_reqmaterials_path, class: 'btn' %>
-				<%= link_to "Calendário", static_pages_all_reqmaterials_path, class: 'btn' %>
+				<div class="btn-group">
+					<%= link_to "Calendário", static_pages_all_reqmaterials_path, class: 'btn' %>
+					<%= link_to "Mais requisições", static_pages_reqmaterials_path, class: 'btn' %>
+				</div>
 				<table class="table">
 					<thead>
 						<tr>
@@ -39,8 +41,10 @@
 				</table>
 			</div>
 			<div class="tab-pane" id="tabs-2">
-				<%= link_to "Gerir", static_pages_reqpeople_path, class: 'btn' %>
-				<%= link_to "Calendário", static_pages_all_reqpeople_path, class: 'btn' %>
+				<div class="btn-group">
+					<%= link_to "Calendário", static_pages_all_reqpeople_path, class: 'btn' %>
+					<%= link_to "Mais requisições", static_pages_reqpeople_path, class: 'btn' %>
+				</div>
 				<table class="table">
 					<thead>
 						<tr>
