--- a/app/views/static_pages/reqpeople.html.erb
+++ b/app/views/static_pages/reqpeople.html.erb
@@ -2,7 +2,10 @@
 
 <h1>Requisições de transporte de pessoal</h1>
 <div class="span10 offset1">
-	<%= link_to "Voltar", root_path, class: 'btn' %>
+	<div class="btn-group">
+		<%= link_to "Calendário", static_pages_all_reqpeople_path, class: 'btn' %>
+		<%= link_to "Início", root_path, class: 'btn' %>
+	</div>
 	<table class="table">
 		<thead>
 			<tr>
